# clifft-cirq

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  cliff.toml  justfile  pyproject.toml
.github/workflows/: ci.yml  pr-title.yml  release.yml
src/clifft_cirq/: __init__.py  _convert.py  _result.py  sampler.py
tests/: _helpers.py  test_convert.py  test_equivalence.py  test_sampler.py
